# rust-webassembly-game

./: .gitignore  Cargo.toml  README.md  package-lock.json
client/: Cargo.toml
client/src/: lib.rs
site/: index.html  index.js  package-lock.json  package.json
src/: components.rs  lib.rs  systems.rs  world.rs
src/components/: collider.rs  enemy_ai.rs  move_intent.rs  player_input.rs  position.rs  sprite.rs  velocity.rs
src/systems/: canvas.rs  move_intent.rs  position.rs  sprite.rs  velocity.rs
static/: index.html
