[package]
name = "client"
version = "0.1.1"
authors = ["Masahiro Yoshida <mypianoplayer@gmail.com>"]
edition = "2018"
repository = "https://github.com/mas-yo/rust-webassembly-game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]